# Transit

./: README.md  com.github.Aurnytoraink.Transit.json  meson.build
data/: com.github.Aurnytoraink.Transit.appdata.xml.in  com.github.Aurnytoraink.Transit.desktop.in  com.github.Aurnytoraink.Transit.gschema.xml  meson.build  transit.gresource.xml
data/css/: style.css
data/icons/logo/: meson.build
data/ui/: window.ui
po/: POTFILES  meson.build
src/: main.py  meson.build  transit.gresource.xml  transit.in  window.py
src/transit/: lines_row.py  main.py  task.py  window.py
src/transit/api/: help_request.py  models.py  rtm.py
